--- a/MyWebsite/MyWebsite/templates/rescue/create_alert.html
+++ b/MyWebsite/MyWebsite/templates/rescue/create_alert.html
@@ -1,4 +1,4 @@
-﻿{% from "rescue/_formhelper.html" import render_field %}
+﻿{% from "_formhelper.html" import render_field %}
 {% extends "layout.html" %}
 {% block content %}
 
