--- a/MyWebsite/MyWebsite/templates/index.html
+++ b/MyWebsite/MyWebsite/templates/index.html
@@ -8,6 +8,14 @@
     <p><a href="http://flask.pocoo.org/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 
+{% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+<div> {{ message }} </div>
+            {% endfor %}
+        {% endif %}
+{% endwith %}
+
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
