--- a/AlertWeb/AlertWeb/static/css/layout.css
+++ b/AlertWeb/AlertWeb/static/css/layout.css
@@ -229,7 +229,8 @@ section .btn {
 #header {
 	margin:0; padding:0;
 	position:relative;
-	height:60px; margin-top:-60px;
+	height:60px; 
+    margin-top:-28px;
 	left:0; right:0; top:0;
 	color:#fff;
 	z-index:99;
