--- a/AlertWeb/AlertWeb/templates/contact.html
+++ b/AlertWeb/AlertWeb/templates/contact.html
@@ -1,20 +1,47 @@
-{% extends "layout.html" %}
+<section id="contact" class="alternate arrow-down">
+    <div class="container">
+        <header class="text-center">
+            <h1>CONTACT</h1>
+        </header>
 
-{% block content %}
+        <div class="divider"><!-- lines divider --></div>
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+        <article>
+            <p class="text-center big-paragraph">
+                Drop us a line or just say <strong><em>Hello!</em></strong>
+                <small class="fsize15 block">
+                    Lorem ipsum dolor sit amet, <strong>consectetur adipiscing</strong> elit. <br />
+                    Maecenas metus nulla, commodo a sodales sed, dignissim pretium nunc.
+                </small>
+            </p>
+        </article>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+        <article>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+            <!-- Alert -->
+            <div id="_sent_ok_" class="alert alert-success fade in fsize16 hide">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                <span id="_msg_txt_"><strong>Thank You!</strong> Your message successfully sent!</span>
+            </div>
 
-{% endblock %}
+            <!-- Form -->
+            <form id="contactForm" method="post" action="php/contact.php" class="white block form-inline">
+                <div class="row">
+                    <div class="col-md-4"><input required class="fullwidth" type="text" name="contact_name" id="contact_name" value="" placeholder="NAME *" title="Name" /></div>
+                    <div class="col-md-4"><input required class="fullwidth" type="email" name="contact_email" id="contact_email" value="" placeholder="EMAIL *" title="Email" /></div>
+                    <div class="col-md-4"><input class="fullwidth" type="text" name="contact_subject" id="contact_subject" value="" placeholder="SUBJECT" title="subject" /></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12"><textarea required class="fullwidth" rows="5" name="contact_comment" id="contact_comment" placeholder="MESSAGE *"></textarea></div>
+                    <div class="col-md-12">
+                        <input type="hidden" name="captcha" id="captcha" value="" /><!-- hidden field - humans should not see it, only spam bots will see it -->
+                        <button id="contact_submit" class="btn btn-default">SEND MESSAGE</button>
+                    </div>
+                </div>
+            </form>
+
+        </article>
+
+    </div>
+</section>
