--- a/AlertWeb/AlertWeb/templates/rescue/list_alerts.html
+++ b/AlertWeb/AlertWeb/templates/rescue/list_alerts.html
@@ -1,4 +1,9 @@
 ﻿{% extends "layout.html" %}
+
+{% block header %}
+    {% include 'header.html' %}
+{% endblock %}
+
 {% block content %}
 
 {% with messages = get_flashed_messages() %}
@@ -16,10 +21,12 @@
     <div> {{ alert.adventure_name }}   starting on: {{ alert.adventure_start_time}} </div>
 {% endfor %}
 
-    
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+{% endblock %}
 
+{% block contact %}
+    {% include 'contact.html' %}
+{% endblock %}
+
+{% block footer %}
+    {% include 'footer.html' %}
 {% endblock %}
