--- a/AlertWeb/AlertWeb/templates/footer.html
+++ b/AlertWeb/AlertWeb/templates/footer.html
@@ -8,8 +8,8 @@
         <div class="row">
 
             <div class="col-md-6 copyright">
-                Your Company, LTD<br />
-                2014 &copy; All Rights Reserved.
+                Rescue Alert<br />
+                2016 &copy; All Rights Reserved.
             </div>
 
             <div class="col-md-6 text-right">
