--- a/AlertWeb/AlertWeb/templates/layout.html
+++ b/AlertWeb/AlertWeb/templates/layout.html
@@ -17,108 +17,76 @@
 
 
     <!-- CORE CSS FRAMEWORK -->
-    <link href="static/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="static/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
-    <link href="static/plugins/font-linecons/linecons.css" rel="stylesheet" type="text/css" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
+    <link href="/static/plugins/font-linecons/linecons.css" rel="stylesheet" type="text/css" />
+    <link href="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
 
     <!-- PLUGINS -->
-    <link href="static/css/superslides.css" rel="stylesheet" type="text/css" />
-    <link href="static/css/owl.carousel.css" rel="stylesheet" type="text/css" />
-    <link href="static/plugins/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/superslides.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/owl.carousel.css" rel="stylesheet" type="text/css" />
+    <link href="/static/plugins/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
 
     <!-- CSS TEMPLATE -->
-    <link href="static/css/reset.css" rel="stylesheet" type="text/css" />
-    <link href="static/css/framework.css" rel="stylesheet" type="text/css" />
-    <link href="static/css/typography.css" rel="stylesheet" type="text/css" />
-    <link href="static/css/layout.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/reset.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/framework.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/typography.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/layout.css" rel="stylesheet" type="text/css" />
 
     <link href="static/css/blog.css" rel="stylesheet" type="text/css" />
 
     <!-- colors : demo only -->
-    <link href="static/css/color/green.css" rel="stylesheet" type="text/css" /><!-- default style : green-->
-    <link href="static/css/color/blue.css" rel="alternate stylesheet" type="text/css" title="blue" />
-    <link href="static/css/color/orange.css" rel="alternate stylesheet" type="text/css" title="orange" />
-    <link href="static/css/color/green.css" rel="alternate stylesheet" type="text/css" title="green" />
-    <link href="static/css/color/red.css" rel="alternate stylesheet" type="text/css" title="red" />
-    <link href="static/css/color/yellow.css" rel="alternate stylesheet" type="text/css" title="yellow" />
-    <link href="static/css/color/gray.css" rel="alternate stylesheet" type="text/css" title="gray" />
-    <link href="static/css/color/pink.css" rel="alternate stylesheet" type="text/css" title="pink" />
-    <link href="static/css/color/mauve.css" rel="alternate stylesheet" type="text/css" title="mauve" />
+    <link href="/static/css/color/green.css" rel="stylesheet" type="text/css" /><!-- default style : green-->
+    <link href="/static/css/color/blue.css" rel="alternate stylesheet" type="text/css" title="blue" />
+    <link href="/static/css/color/orange.css" rel="alternate stylesheet" type="text/css" title="orange" />
+    <link href="/static/css/color/green.css" rel="alternate stylesheet" type="text/css" title="green" />
+    <link href="/static/css/color/red.css" rel="alternate stylesheet" type="text/css" title="red" />
+    <link href="/static/css/color/yellow.css" rel="alternate stylesheet" type="text/css" title="yellow" />
+    <link href="/static/css/color/gray.css" rel="alternate stylesheet" type="text/css" title="gray" />
+    <link href="/static/css/color/pink.css" rel="alternate stylesheet" type="text/css" title="pink" />
+    <link href="/static/css/color/mauve.css" rel="alternate stylesheet" type="text/css" title="mauve" />
 
     <!-- ICONS -->
-    <link rel="shortcut icon" href="static/images/favicon.png" type="image/x-icon" />
-    <link rel="icon" href="static/images/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
 
     <!-- mobile settings -->
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
 
     <!-- STYLESWITCHER -->
-    <link href="static/plugins/styleswitcher/styleswitcher.css" rel="stylesheet" type="text/css" />
+    <link href="/static/plugins/styleswitcher/styleswitcher.css" rel="stylesheet" type="text/css" />
 
     <!-- Morenizr -->
-    <script type="text/javascript" src="static/plugins/modernizr.min.js"></script>
+    <script type="text/javascript" src="/static/plugins/modernizr.min.js"></script>
+
+    <!-- CORE FILES -->
+    <script type="text/javascript" src="/static/plugins/jquery/jquery-2.2.3.min.js"></script>
+
+    <script type="text/javascript" src="/static/plugins/jquery.isotope.js"></script>
+    <script type="text/javascript" src="/static/plugins/masonry.js"></script>
+
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
+    <script src="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/src/js/bootstrap-datetimepicker.js"></script>
+
 </head>
 <body>
     <!-- Main Nav -->
     {% block header %} {% endblock %}
     <!-- /Main Nav -->
     <!-- /STYLESWITCHER -->
-    <!-- HOME -->
-    <section id="home" class="full-screen">
-        <!-- full-screen or half-screen (550px height) -->
 
-        <div id="slider">
-
-            <!-- slider navigation -->
-            <nav class="slides-navigation">
-                <a class="prev" href="#"></a>
-                <a class="next" href="#"></a>
-            </nav>
-
-            <ul class="slides-container">
-
-                <!-- Item 1 -->
-                <li>
-                    <div class="image-caption">
-                        <hr /><hr />
-                        <div class="inner">
-                            <h2 class="bigtext strtoupper nomargin">Rescue Alert App</h2>
-                            <p>NEW RELEASE AVAILABLE</p>
-                        </div>
-                        <hr /><hr />
-                    </div>
-
-                    <!--<span class="overlay"></span>-->
-                    <div style="background-image: url('static/images/preview/slider/vision.jpg');" class="fullscreen-img"></div>
-                </li>
-
-                <!-- Item 2 -->
-                <li>
-                    <div class="image-caption">
-                        <hr /><hr />
-                        <div class="inner">
-                            <h1 class="bigtext strtoupper nomargin">ONE PAGE DESIGN</h1>
-                            <p>THE TEMPLATE IS EASY TO SET UP</p>
-                        </div>
-                        <hr /><hr />
-                    </div>
-
-                    <!--<span class="overlay"></span>-->
-                    <div style="background-image: url('static/images/preview/slider/background.jpg');" class="fullscreen-img"></div>
-                </li>
-
-            </ul>
-
-        </div>
-
-    </section>
-    <!-- /HOME -->
 
 
     
 
-    {% block content %} {% endblock %}
+    {% block content %} 
+    <!-- HOME -->
+    <!-- /HOME -->
+    {% endblock %}
+
+
 
     <!-- RELEASED -->
     {% block released %} {% endblock %}
@@ -126,7 +94,7 @@
 
     
     <!-- QUOTE -->
-    <section class="cover" style="background-image:url('static/images/preview/slider/3.jpg')">
+    <section class="cover" style="background-image:url('/static/images/preview/slider/3.jpg')">
         <span class="overlay"></span>
         <div class="container text-center" data-animation="bounceIn">
             <q>We can't solve problems by using the same kind of thinking we used when we created them.</q>
@@ -194,25 +162,22 @@
     {% block footer %}{% endblock %}
     <!-- /FOOTER -->
 
-    <!-- CORE FILES -->
-    <script type="text/javascript" src="static/plugins/jquery/jquery-2.2.3.min.js"></script>
-    <script type="text/javascript" src="static/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="static/plugins/jquery.isotope.js"></script>
-    <script type="text/javascript" src="static/plugins/masonry.js"></script>
+    
+    
 
     <!-- PLUGINS -->
-    <script type="text/javascript" src="static/plugins/jquery-appear/jquery.appear.js"></script>
-    <script type="text/javascript" src="static/plugins/superslides/dist/jquery.superslides.min.js"></script>
-    <script type="text/javascript" src="static/plugins/jquery-owl-carousel/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="static/plugins/carouFredSel/jquery.carouFredSel-6.2.1-packed.js"></script>
-    <script type="text/javascript" src="static/plugins/jquery-countTo/jquery.countTo.js"></script>
-    <script type="text/javascript" src="static/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script type="text/javascript" src="static/plugins/jquery.mb.YTPlayer.js"></script><!-- Youtube video background -->
-    <script type="text/javascript" src="static/plugins/holder.js"></script><!-- delete on production -->
+    <script type="text/javascript" src="/static/plugins/jquery-appear/jquery.appear.js"></script>
+    <script type="text/javascript" src="/static/plugins/superslides/dist/jquery.superslides.min.js"></script>
+    <script type="text/javascript" src="/static/plugins/jquery-owl-carousel/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="/static/plugins/carouFredSel/jquery.carouFredSel-6.2.1-packed.js"></script>
+    <script type="text/javascript" src="/static/plugins/jquery-countTo/jquery.countTo.js"></script>
+    <script type="text/javascript" src="/static/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="/static/plugins/jquery.mb.YTPlayer.js"></script><!-- Youtube video background -->
+    <script type="text/javascript" src="/static/plugins/holder.js"></script><!-- delete on production -->
     <!-- js scripts -->
-    <script async type="text/javascript" src="static/js/scripts.js"></script>
+    <script async type="text/javascript" src="/static/js/scripts.js"></script>
 
-    <script async type="text/javascript" src="static/plugins/styleswitcher/styleswitcher.js"></script>
+    <script async type="text/javascript" src="/static/plugins/styleswitcher/styleswitcher.js"></script>
 
 
     <!-- Change UA-XXXXX-X with your site ID -->
