--- a/AlertWeb/AlertWeb/templates/header.html
+++ b/AlertWeb/AlertWeb/templates/header.html
@@ -34,6 +34,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
                     <li><a href="{{ url_for('rescue_alert.create_rescue_alert') }}">Create Alert</a></li>
+                    <li><a href="{{ url_for('rescue_alert.list_rescue_alerts') }}">My Alerts</a></li>
                     <li><a href="{{ url_for('auth.logout') }}">Logout </a></li>
                     {% else %}
                     <li><a href="{{ url_for('auth.signup') }}">Signup</a></li>
