--- a/AlertWeb/AlertWeb/templates/_formhelper.html
+++ b/AlertWeb/AlertWeb/templates/_formhelper.html
@@ -11,3 +11,14 @@
     {% endif %}
 </dd>
 {% endmacro %}
+
+
+{% macro display_errors(field) %}
+    {% if field.errors %}
+    <ul class=errors>
+        {% for error in field.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+{% endmacro %}
