Add rescue created mail notification templates for email.

--- a/AlertWeb/AlertWeb/templates/header.html
+++ b/AlertWeb/AlertWeb/templates/header.html
@@ -21,7 +21,7 @@
                             Example:
                                 <span class="white">ISIS</span><span class="styleColor">ONE</span>
                     -->
-                    <span ahref="{{ url_for('home')}}" class="">Rescue Alert</span>
+                    <span ahref="{{ url_for('mod_main.home')}}" class="">Rescue Alert</span>
                 </a>
             </div>
 
