Add js file for activate alert. Update templates to include list_alert.js

--- a/AlertWeb/AlertWeb/templates/rescue/list_alerts.html
+++ b/AlertWeb/AlertWeb/templates/rescue/list_alerts.html
@@ -1,5 +1,9 @@
 ﻿{% extends "layout.html" %}
 
+{% block script %}
+<script type="text/javascript" src="/static/js/list_alerts.js"></script>
+{% endblock %}
+
 {% block header %}
     {% include 'header.html' %}
 {% endblock %}
