--- a/AlertWeb/AlertWeb/templates/layout.html
+++ b/AlertWeb/AlertWeb/templates/layout.html
@@ -70,6 +70,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
     <script src="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/src/js/bootstrap-datetimepicker.js"></script>
 
+    {% block script %} {% endblock %}
+
 </head>
 <body>
     <!-- Main Nav -->
